// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > custom 포맷 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    커스텀 진행 중
  </h3>
  <p
    class="text-sm text-blue-400 mt-1"
  >
    커스텀 진행 중
  </p>
  <div
    class="mt-2 flex items-center space-x-2"
  >
    <div
      class="h-1 flex-1 rounded-full bg-gray-700/30"
    >
      <div
        class="h-full rounded-full bg-blue-400"
      />
    </div>
    <span
      class="text-xs font-medium text-blue-400"
    >
      60
      %
    </span>
  </div>
</div>
`;

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > percentage 포맷 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    진행률: 60.00%
  </h3>
  <p
    class="text-sm text-blue-400 mt-1"
  >
    단계 3 진행 중
  </p>
  <div
    class="mt-2 flex items-center space-x-2"
  >
    <div
      class="h-1 flex-1 rounded-full bg-gray-700/30"
    >
      <div
        class="h-full rounded-full bg-blue-400"
      />
    </div>
    <span
      class="text-xs font-medium text-blue-400"
    >
      60
      %
    </span>
  </div>
</div>
`;

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > step-count 포맷 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    3 / 5 단계
  </h3>
  <p
    class="text-sm text-blue-400 mt-1"
  >
    단계 3 진행 중
  </p>
  <div
    class="mt-2 flex items-center space-x-2"
  >
    <div
      class="h-1 flex-1 rounded-full bg-gray-700/30"
    >
      <div
        class="h-full rounded-full bg-blue-400"
      />
    </div>
    <span
      class="text-xs font-medium text-blue-400"
    >
      60
      %
    </span>
  </div>
</div>
`;

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > 기본 상태 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    🔄 시뮬레이션 진행 중... (스텝 3 / 5)
  </h3>
  <p
    class="text-sm text-blue-400 mt-1"
  >
    단계 3 진행 중
  </p>
  <div
    class="mt-2 flex items-center space-x-2"
  >
    <div
      class="h-1 flex-1 rounded-full bg-gray-700/30"
    >
      <div
        class="h-full rounded-full bg-blue-400"
      />
    </div>
    <span
      class="text-xs font-medium text-blue-400"
    >
      60
      %
    </span>
  </div>
</div>
`;

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > 에러 상태 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    🔄 시뮬레이션 진행 중... (스텝 3 / 5)
  </h3>
  <p
    class="text-sm text-red-400 mt-1"
  >
    ❌ 테스트 에러
  </p>
  <div
    class="mt-2 flex items-center space-x-2"
  >
    <div
      class="h-1 flex-1 rounded-full bg-gray-700/30"
    >
      <div
        class="h-full rounded-full bg-red-400"
      />
    </div>
    <span
      class="text-xs font-medium text-red-400"
    >
      60
      %
    </span>
  </div>
</div>
`;

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > 완료 상태 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    🔄 시뮬레이션 진행 중... (스텝 5 / 5)
  </h3>
  <p
    class="text-sm text-green-400 mt-1"
  >
    ✅ 시뮬레이션이 성공적으로 완료되었습니다
  </p>
  <div
    class="mt-2 flex items-center space-x-2"
  >
    <div
      class="h-1 flex-1 rounded-full bg-gray-700/30"
    >
      <div
        class="h-full rounded-full bg-green-400"
      />
    </div>
    <span
      class="text-xs font-medium text-green-400"
    >
      100
      %
    </span>
  </div>
</div>
`;

exports[`📝 ProgressLabel 컴포넌트 > 스냅샷 테스트 > 진행률 바 숨김 스냅샷 1`] = `
<div
  class="flex-1"
>
  <h3
    class="text-lg font-semibold text-white"
  >
    🔄 시뮬레이션 진행 중... (스텝 3 / 5)
  </h3>
  <p
    class="text-sm text-blue-400 mt-1"
  >
    단계 3 진행 중
  </p>
</div>
`;
